Color expandable list markers correctly in dark mode

--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -170,6 +170,9 @@
 			transition: transform 0.1s ease;
 			position: relative;
 			top: 1px;
+			@media (prefers-color-scheme: dark) {
+				filter: invert(1);
+			}
 		}
 
 		+ ul {
